# openroute-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  server.json
.github/: deploy.sh  release.sh
.github/workflows/: test.yml
src/openroute_mcp/: __init__.py  server.py  types.py  utils.py
tests/: test_openrouteservice.py  try_mcp.py
